demoProject/force-app/main/default/objects/TOP_X_DESIGNATION__c/TOP_X_DESIGNATION__c.object-meta.xml
<CustomObject>
    <label>TOP X DESIGNATION</label>
    <nameField>
        <label>TOP X DESIGNATION Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TOP X DESIGNATIONS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>