demoProject/force-app/main/default/objects/TOP_X_DESIGNATION__c/fields/Document_attached__c.field-meta.xml
<CustomField>
    <fullName>Document_attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Document_attached</label>
    <type>Checkbox</type>
</CustomField>