demoProject/force-app/main/default/objects/TOP_X_DESIGNATION__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>TOP X DESIGNATIONS</relationshipLabel>
    <relationshipName>TOP_X_DESIGNATIONS</relationshipName>
    <type>Lookup</type>
</CustomField>